@@ -220,12 +220,12 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $handleLib,
         $confScript,
         $extensionKey,
-        $itemArray,
-        $calculatedArray,
+        array $itemArray,
+        array $calculatedArray,
         $deliveryNote,
         $paymentActivity,
         $currentPaymentActivity,
-        $infoArray,
+        array $infoArray,
         $pidArray,
         $linkParams,
         $trackingCode,
@@ -282,12 +282,12 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
         $handleLib,
         $confScript,
         $extensionKey,
-        $itemArray,
-        $calculatedArray,
+        array $itemArray,
+        array $calculatedArray,
         $deliveryNote,
         $paymentActivity,
         $currentPaymentActivity,
-        $infoArray,
+        array $infoArray,
         $pidArray,
         $linkParams,
         $trackingCode,
