@@ -8,22 +8,14 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Payment Transactor API',
     'description' => 'This is a basic API to develop extensions which connect to different payment transaction gateways.',
     'category' => 'misc',
-    'shy' => 0,
-    'version' => '0.7.1',
-    'priority' => '',
-    'loadOrder' => '',
-    'module' => '',
+    'version' => '0.7.2',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
-    'modify_tables' => '',
     'clearcacheonload' => 0,
-    'lockType' => '',
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => '',
-    'CGLcompliance' => '',
-    'CGLcompliance_note' => '',
     'constraints' => array(
         'depends' => array(
             'php' => '5.6.0-7.99.99',
