@@ -1,6 +1,0 @@
-<?php
-
-if (!defined ('TYPO3_MODE')) {
-    die ('Access denied.');
-}
-
